# chuk-robot-benches

./: README.md  ROADMAP.md
chuk-arena/: .gitignore  Cargo.toml  README.md  SPEC.md
chuk-arena/arena-agents/: Cargo.toml
chuk-arena/arena-agents/src/: lib.rs
chuk-arena/arena-bench/: Cargo.toml
chuk-arena/arena-bench/src/: edge.rs  lib.rs
chuk-arena/arena-cells/: Cargo.toml
chuk-arena/arena-cells/src/: lib.rs
chuk-arena/arena-cli/: Cargo.toml
chuk-arena/arena-cli/src/: main.rs
chuk-arena/arena-cli/tests/: fresh_process.rs
chuk-arena/arena-core/: Cargo.toml
chuk-arena/arena-core/src/: contact.rs  lib.rs
chuk-arena/arena-diff/: Cargo.toml
chuk-arena/arena-diff/src/: lib.rs
chuk-arena/arena-plant/: Cargo.toml
chuk-arena/arena-plant/src/: bind.rs  dynamic.rs  lib.rs
chuk-arena/arena-store/: Cargo.toml
chuk-arena/arena-store/src/: lib.rs
chuk-arena/arena-tourney/: Cargo.toml
chuk-arena/arena-tourney/src/: lib.rs
chuk-arena/arena-tourney/tests/: determinism.rs  safety.rs
chuk-arena/arena-view/: bench-template.html  render.py  render_bench.py  template.html
chuk-arena/arena-wasm/: Cargo.toml
chuk-arena/arena-wasm/src/: lib.rs
derived/: mvp-wedge-edge-bench.json  mvp-wedge-harness-view.html  mvp-wedge-harness.echeck.json  mvp-wedge-inspector.html  mvp-wedge.derived.json  robowire-designer.html
harness/: mvp-wedge-harness.json
parts/: bbb-dual-esc-3s.json  bbb-dual-esc.json  brushless-esc-drive.json  brushless-esc-weapon.json  brushless-motor-drive.json  brushless-motor-weapon.json  buzzer-active-5v.json  charge-controller-small.json  connector-bullet-3.5mm.json  connector-xt30.json  connector-xt60.json  elrs-rx.json  env-bme280.json  fuse-ptc-5a.json  harness-allowance.json  imu-icm42688.json  led-green-5mm.json  led-red-5mm.json  line-sensor-analog.json  lipo-2s-260-bms.json  lipo-2s-260.json  lipo-3s-450-bms.json  (+18 more)
(+125 files in other folders)
