[package]
name = "arena-store"
version.workspace = true
edition.workspace = true

[dependencies]
arena-core = { path = "../arena-core" }
arena-plant = { path = "../arena-plant" }
arena-agents = { path = "../arena-agents" }
arena-cells = { path = "../arena-cells" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
